@@ -1,3 +1,12 @@
+2008-07-25  Hans Breuer  <hans@breuer.org>
+
+	* app/display.c(ddisplay_zoom) : improved zoom behavior when using 
+	ctrl+mouse wheel around the cursor position, based on code by 
+	Ithai Levi, bug #540210 
+
+	* app/mavigation.c : don't divide by zero when using the navigation
+	window with an empty diagram
+
 2008-07-20  Hans Breuer  <hans@breuer.org>
 
 	* objects/custom/custom_object.c(custom_copy): use object_copy_props()
